# gc

./: vcpkg.json
app/: CMakeLists.txt
app/src/: MainWindow.cpp  MainWindow.h  Window.cpp  Window.h  main.cpp
app/ui/: MainWindow.ui  Window.ui
